# pxr-ar

./: CMakeLists.txt  README.md  filesystemAsset.cpp  pch.h  pyproject-dev.toml  pyproject.toml
.github/actions/building-deps/: action.yml
cmake/: pxr-ar-config.cmake.in
src/: CMakeLists.txt
src/pxr/ar/: api.h  ar.h  asset.cpp  asset.h  assetInfo.cpp  assetInfo.h  debugCodes.cpp  debugCodes.h  defaultResolver.cpp  defaultResolver.h  defaultResolverContext.cpp  defaultResolverContext.h  definePackageResolver.cpp  definePackageResolver.h  defineResolver.cpp  defineResolver.h  defineResolverContext.h  filesystemAsset.cpp  filesystemAsset.h  filesystemWritableAsset.cpp  filesystemWritableAsset.h  inMemoryAsset.cpp  inMemoryAsset.h  moduleDeps.cpp  notice.cpp  notice.h  packageResolver.cpp  packageResolver.h  packageUtils.cpp  packageUtils.h  pch.h  plugInfo.json  pyResolverContext.cpp  pyResolverContext.h  resolvedPath.cpp  resolvedPath.h  resolver.cpp  resolver.h  resolverContext.cpp  resolverContext.h  (+9 more)
src/python/: CMakeLists.txt  __init__.py  module.cpp  wrapAsset.cpp  wrapAssetInfo.cpp  wrapDefaultResolver.cpp  wrapDefaultResolverContext.cpp  wrapNotice.cpp  wrapPackageUtils.cpp  wrapResolvedPath.cpp  wrapResolver.cpp  wrapResolverContext.cpp  wrapResolverContextBinder.cpp  wrapResolverScopedCache.cpp  wrapTimestamp.cpp
test/: CMakeLists.txt  TestArOptionalImplementation_plugin.cpp  TestArPackageResolver_plugin.cpp  TestArURIResolver_plugin.cpp  TestArURIResolver_plugin.h  testArAdvancedAPI.py  testArDefaultResolver.cpp  testArNotice.cpp  testArOpenAsset.py  testArOptionalImplementation.py  testArResolverContext.cpp  testArThreadedAssetCreation.cpp  testArURIResolver.cpp  testArURIResolver.py  test_ArAdvancedAPI.py  test_ArAssetInfo.py  test_ArDefaultResolver.py  test_ArOptionalImplementation.py  test_ArPackageUtils.py  test_ArResolvedPath.py  test_ArResolverContext.py  test_ArTimestamp.py  test_ArURIResolver.py
test/plugins/: CMakeLists.txt
test/plugins/TestArAdvancedAPI/: CMakeLists.txt  plugInfo.json  plugin.cpp
test/plugins/TestArOptionalImplementation/: CMakeLists.txt  plugInfo.json  plugin.cpp
test/plugins/TestArPackageResolver/: CMakeLists.txt  plugInfo.json
test/plugins/TestArURIResolver/: CMakeLists.txt  plugInfo.json  plugin.cpp  plugin.h
testenv/: testArOpenAsset.py
